# nativeapi

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  README.md
examples/application_example/: CMakeLists.txt  main.cpp
examples/autostart_example/: CMakeLists.txt  main.cpp
examples/display_example/: CMakeLists.txt  main.cpp
examples/id_allocator_example/: CMakeLists.txt  main.cpp
examples/keyboard_example/: CMakeLists.txt  main.cpp
examples/launch_at_login_c_example/: CMakeLists.txt  main.c
examples/launch_at_login_example/: CMakeLists.txt  main.cpp
examples/menu_c_example/: CMakeLists.txt  main.c
examples/menu_example/: CMakeLists.txt  main.cpp
examples/message_dialog_c_example/: CMakeLists.txt  main.c
examples/nswindow_example/: CMakeLists.txt  main.mm
examples/screen_info/: CMakeLists.txt  main.cpp
examples/shortcut_c_example/: CMakeLists.txt  main.c
examples/shortcut_example/: CMakeLists.txt  main.cpp
examples/storage_c_example/: CMakeLists.txt  main.c
examples/storage_example/: CMakeLists.txt  main.cpp
examples/tray_example/: CMakeLists.txt  main.cpp
examples/tray_icon_example/: CMakeLists.txt  main.cpp
examples/tray_menu_c_example/: CMakeLists.txt  main.c
examples/url_opener_c_example/: CMakeLists.txt  main.c
examples/window_c_example/: CMakeLists.txt  main.c
examples/window_example/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  accessibility_manager.cpp  accessibility_manager.h  accessibility_manager_macos.mm  app_runner.cpp  app_runner.h  application.cpp  application.h  application_event.h  autostart.h  broadcast_center.cpp  broadcast_center.h  broadcast_center_macos.mm  callback_test  callback_test.cpp  common_events.h  complete_event_demo.cpp  dialog.cpp  dialog.h  display.h  display_event.h  display_manager.cpp  display_manager.h  display_manager_linux.cpp  display_manager_macos.mm  display_manager_windows.cpp  event_dispatcher.cpp  event_dispatcher.h  event_emitter.cpp  event_emitter.h  event_integration_example.h  event_system.cpp  event_system.h  event_system_example.cpp  event_system_test.cpp  event_test  geometry.h  global_registry.h  image.cpp  image.h  (+55 more)
src/capi/: accessibility_manager_c.cpp  accessibility_manager_c.h  app_runner_c.cpp  app_runner_c.h  application_c.cpp  application_c.h  autostart_c.cpp  autostart_c.h  color_c.cpp  color_c.h  display_c.c  display_c.cpp  display_c.h  display_manager_c.cpp  display_manager_c.h  geometry_c.h  image_c.cpp  image_c.h  keyboard_monitor_c.cpp  keyboard_monitor_c.h  launch_at_login_c.cpp  launch_at_login_c.h  menu_c.cpp  menu_c.h  message_dialog_c.cpp  message_dialog_c.h  positioning_strategy_c.cpp  positioning_strategy_c.h  preferences_c.cpp  preferences_c.h  run_example_app_c.cpp  run_example_app_c.h  secure_storage_c.cpp  secure_storage_c.h  shortcut_c.cpp  shortcut_c.h  shortcut_manager_c.cpp  shortcut_manager_c.h  storage_c.cpp  storage_c.h  (+12 more)
src/foundation/: color.cpp  color.h  event.h  event_emitter.cpp  event_emitter.h  geometry.h  id_allocator.cpp  id_allocator.h  keyboard.cpp  keyboard.h  native_object_provider.h  object_registry.h  positioning_strategy.cpp  positioning_strategy.h
src/impl/: accessibility_manager_macos.mm  display_manager_linux.cpp  display_manager_macos.mm  display_manager_windows.cpp  keyboard_monitor_macos.mm  menu_macos.mm  tray_macos.mm  tray_manager_macos.mm  window_macos.mm  window_manager_macos.mm
src/platform/android/: README.md  accessibility_manager_android.cpp  application_android.cpp  autostart_android.cpp  display_android.cpp  display_manager_android.cpp  image_android.cpp  keyboard_monitor_android.cpp  launch_at_login_android.cpp  menu_android.cpp  menu_item_android.cpp  message_dialog_android.cpp  preferences_android.cpp  tray_icon_android.cpp  tray_manager_android.cpp  url_opener_android.cpp  window_android.cpp  window_manager_android.cpp
src/platform/ios/: accessibility_manager_ios.mm  application_ios.mm  autostart_ios.mm  display_ios.mm  display_manager_ios.mm  image_ios.mm  keyboard_monitor_ios.mm  launch_at_login_ios.mm  menu_ios.mm  message_dialog_ios.mm  preferences_ios.mm  secure_storage_ios.mm  shortcut_manager_ios.mm  tray_icon_ios.mm  tray_manager_ios.mm  url_opener_ios.mm  window_ios.mm  window_manager_ios.mm
src/platform/linux/: accessibility_manager_linux.cpp  app_runner_linux.cpp  application_linux.cpp  autostart_linux.cpp  display_linux.cpp  display_manager_linux.cpp  image_linux.cpp  keyboard_monitor_linux.cpp  launch_at_login_linux.cpp  menu_linux.cpp  message_dialog_linux.cpp  preferences_linux.cpp  secure_storage_linux.cpp  shortcut_manager_linux.cpp  tray_icon_linux.cpp  tray_linux.cpp  tray_manager_linux.cpp  url_opener_linux.cpp  window_linux.cpp  window_manager_linux.cpp
src/platform/macos/: accessibility_manager_macos.mm  app_runner_macos.mm  application_macos.mm  autostart_macos.mm  coordinate_utils_macos.h  display_macos.mm  display_manager_macos.mm  image_macos.mm  keyboard_monitor_macos.mm  launch_at_login_macos.mm  menu_macos.mm  message_dialog_macos.mm  preferences_macos.mm  secure_storage_macos.mm  shortcut_manager_macos.mm  tray_icon_macos.mm  tray_macos.mm  tray_manager_macos.mm  url_opener_macos.mm  window_macos.mm  window_manager_macos.mm
src/platform/ohos/: accessibility_manager_ohos.cpp  application_ohos.cpp  autostart_ohos.cpp  display_manager_ohos.cpp  display_ohos.cpp  image_ohos.cpp  keyboard_monitor_ohos.cpp  launch_at_login_ohos.cpp  menu_item_ohos.cpp  menu_ohos.cpp  message_dialog_ohos.cpp  preferences_ohos.cpp  tray_icon_ohos.cpp  tray_manager_ohos.cpp  url_opener_ohos.cpp  window_manager_ohos.cpp  window_ohos.cpp
src/platform/windows/: accessibility_manager_windows.cpp  app_runner_windows.cpp  application_windows.cpp  autostart_windows.cpp  display_manager_windows.cpp  display_windows.cpp  dpi_utils_windows.cpp  dpi_utils_windows.h  image_windows.cpp  keyboard_monitor_windows.cpp  launch_at_login_windows.cpp  menu_windows.cpp  message_dialog_windows.cpp  preferences_windows.cpp  (+13 more)
src/ui/: display.h  geometry.h
tests/: CMakeLists.txt  autostart_test.cpp  url_opener_test.cpp
(+150 files in other folders)
