cmake_minimum_required(VERSION 3.16)
project(menu_example)

set(CMAKE_CXX_STANDARD 17)

# Include the nativeapi headers
include_directories(${CMAKE_SOURCE_DIR}/../../include)

# Add the executable
add_executable(menu_example main.cpp)

# Link against the nativeapi library
target_link_libraries(menu_example nativeapi)

# Platform-specific settings
if(APPLE)
    find_library(COCOA_LIBRARY Cocoa)
    target_link_libraries(menu_example ${COCOA_LIBRARY})
elseif(WIN32)
    target_link_libraries(menu_example user32 kernel32)
elseif(UNIX)
    find_package(PkgConfig REQUIRED)
    pkg_check_modules(GTK3 REQUIRED gtk+-3.0)
    target_include_directories(menu_example PRIVATE ${GTK3_INCLUDE_DIRS})
    target_link_libraries(menu_example ${GTK3_LIBRARIES})
endif()
